<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start"
            style="@style/MaterialButtonMainActionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="0"
            android:text="@string/play" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/record"
            style="@style/MaterialButtonMainActionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="0"
            android:text="@string/record" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/info"
            style="@style/MaterialButtonMainActionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="0"
            android:text="@string/info" />
    </LinearLayout>

</LinearLayout>