<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="32dp"
    app:cardElevation="16dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/your_new_record"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutMask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:errorEnabled="false">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:maxLength="255"
                    android:textAlignment="textStart"
                    android:textSize="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="#BDBDBD"
                android:textSize="14sp"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonChangeUser"
                style="@style/MaterialButtonPopUpSecondaryActionStyle"
                android:letterSpacing="0"
                android:text="@string/cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                style="@style/MaterialButtonMainActionStyle"
                android:letterSpacing="0" />
        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>
